--- a/grader/grades/templates/projects/main.html
+++ b/grader/grades/templates/projects/main.html
@@ -9,12 +9,44 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
 
   </head>
 
   <body>
-Hello
+  
+    <!-- Top Navigation Bar -->
+    <ul id='main' class="navigation">
+        <li class="navigation-item">Test1</li>
+        <li class="navigation-item">Test2</li>
+        <li class="navigation-item">Test3</li>
+        <li class="navigation-item">Test4</li>
+        <li class="navigation-item">Test5</li>
+    </ul>
+
+    <!-- Main Display -->
+    <div class="wrapper">
+      <div class="welcome">
+        <div class="header">Welcome To Your Classroom</div>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        <div class="button">Sign In</div>
+      </div>
+      <div class="grid-container">
+        <div class="info">
+          <div class="header">Teachers</div>
+        </div>
+        <div class="info">
+          <div class="header">Students</div>
+        </div>
+      </div>
+    </div>
+
   </body>
 
 </html>
