scraping video link based on keyword

--- a/grader/grades/templates/projects/main.html
+++ b/grader/grades/templates/projects/main.html
@@ -14,7 +14,12 @@
   </head>
 
   <body>
-Hello
+    {{name}}
   </body>
+  <!-- <video width="420" height="315"
+  src="{{name}}"> -->
+
+  <iframe width="560" height="315" src="{{name}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</video>
 
 </html>
