--- a/grader/grades/templates/projects/classroom.html
+++ b/grader/grades/templates/projects/classroom.html
@@ -22,12 +22,12 @@
     <!-- Top Navigation Bar -->
     <ul id='main' class="navigation">
       <div class="wid">
-        <a href="./"><li class="navigation-item" style="margin-left: 0">Home</li></a>
+        <a href="./"><li class="navigation-item">Home</li></a>
         <a href="./classroom"><li class="navigation-item">Classrooms</li></a>
         {% if first_name %}
-        <a href="./logout"><li class="navigation-item nav-auth-status">Sign Out</li></a>
+        <a href="./logout"><li class="navigation-item nav-auth-status" style="margin-right: 20px">Sign Out</li></a>
         {% else %}
-        <a href="./login"><li class="navigation-item nav-auth-status">Sign In</li></a>
+        <a href="./login"><li class="navigation-item nav-auth-status" style="margin-right: 20px">Sign In</li></a>
         {% endif %}
       </div>
     </ul>
@@ -40,8 +40,8 @@
           labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
           commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-        <a href=""><div class="button">Create A Classroom</div></a>
-        <a href=""><div class="button">Join A Classroom</div></a>
+        <a href=""><div class="button">Create a Classroom</div></a>
+        <a href=""><div class="button">Join a Classroom</div></a>
       </div>
       <div class="grid-container">
         <div class="info">
@@ -51,6 +51,11 @@
           <div class="header">Joined Classes</div>
         </div>
       </div>
+      <form action="classroom" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit">
+      </form>
     </div>
 
   </body>
