--- a/grader/grades/templates/projects/main.html
+++ b/grader/grades/templates/projects/main.html
@@ -34,6 +34,7 @@
 
     <!-- Main Display -->
     <div class="wrapper">
+
       <div class="welcome">
         {% if first_name %}
         <div class="header">Hi {{ first_name }}, Welcome To Your Classroom!</div>
@@ -50,6 +51,18 @@
         <a href="./login"><div class="button">Sign In</div></a>
         {% endif %}
       </div>
+
+      {% if not first_name %}
+        <div class="welcome" style="margin-top: 20px">
+          <div class="header">How Do I Use Grader?</div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+          <a href="./classroom"><div class="button">Get Started</div></a>
+        </div>
+      {% endif %}
+
     </div>
 
   </body>
