--- a/grader/grades/templates/projects/main.html
+++ b/grader/grades/templates/projects/main.html
@@ -37,7 +37,7 @@
 
       <div class="welcome">
         {% if first_name %}
-        <div class="header">Hi {{ first_name }}, Welcome To Your Classroom!</div>
+        <div class="header">Hi {{ first_name }}, Welcome To Grader!</div>
         {% else %}
         <div class="header">Hi There, Sign In To Get Started...</div>
         {% endif %}
