--- a/grader/grades/templates/projects/classroom.html
+++ b/grader/grades/templates/projects/classroom.html
@@ -42,12 +42,19 @@
           labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
           commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-        <a href=""><div class="button">Create a Classroom</div></a>
-        <a href=""><div class="button">Join a Classroom</div></a>
+        <a href=""><div class="button button-ext">Create a Classroom</div></a>
+        <a href=""><div class="button button-ext">Join a Classroom</div></a>
       </div>
       <div class="grid-container">
         <div class="info">
           <div class="header">Created Classes</div>
+          {% for class in createdClasses %}
+            <div class="class">
+              <div class="subject">{{ class.subject }} ({{ class.code }})</div>
+              <div class="desc">{{ class.description }}</div>
+              <div class="button">Edit Class</div>
+            </div>
+          {% endfor %}
         </div>
         <div class="info">
           <div class="header">Joined Classes</div>
