--- a/grader/grades/static/css/classroom.css
+++ b/grader/grades/static/css/classroom.css
@@ -33,13 +33,10 @@
 }
 .info {
     padding: 20px;
-    height: 300px;
     border-radius: 5px;
     background: white;
-    overflow-y: scroll;
-    overflow-x: hidden;
 }
-.info::-webkit-scrollbar {
+/* .info::-webkit-scrollbar {
     width: 10px;
 }
 .info::-webkit-scrollbar-track {
@@ -49,7 +46,7 @@
 .info::-webkit-scrollbar-thumb {
     background: rgb(218, 218, 218); 
     border-radius: 10px;
-}
+} */
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 490px);
@@ -66,11 +63,18 @@ a {
     text-decoration: none;
 }
 .button-ext {
-    width: 150px;
+    width: 180px;
 }
-
+.g-button {
+    background: #EfEfEf;
+    color: black;
+    width: 130px;
+}
 .class {
-    margin: 20px 0px;
+    margin: 20px 0px 0px 0px;
+    border: 3px solid #EfEfEf;
+    border-radius: 5px;
+    padding: 20px;
 }
 .subject {
     font-size: 16px;
@@ -81,6 +85,33 @@ a {
 .desc {
     font-size: 16px;
     font-weight: 400;
-    margin: 5px 0px;
+    margin: 10px 0px;
     padding: 0px;
+}
+.modal-button {
+    display: inline-block;
+    color: white;
+    background: #0D6DEB;
+    border-radius: 5px;
+    width: 100px;
+    text-align: center;
+    margin-right: 20px;
+    padding: 5px 10px;
+    cursor: pointer;
+    border: none;
+}
+.modal-button-gray {
+    display: inline-block;
+    color: black;
+    background: #EfEfEf;
+    border-radius: 5px;
+    width: 100px;
+    text-align: center;
+    margin-right: 20px;
+    padding: 5px 10px;
+    cursor: pointer;
+    border: none;
+}
+.modal {
+    border-radius: 5px;
 }
