--- a/grader/grades/templates/projects/main.html
+++ b/grader/grades/templates/projects/main.html
@@ -13,13 +13,10 @@
 
   </head>
 
-  <body>
-    {{name}}
+  <body> 
+    {% for link in video %}
+    <h1>{{link}}</h1>
+    {%endfor%}
   </body>
-  <!-- <video width="420" height="315"
-  src="{{name}}"> -->
-
-  <iframe width="560" height="315" src="{{name}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</video>
-
+  
 </html>
