--- a/grader/grades/templates/projects/classroom.html
+++ b/grader/grades/templates/projects/classroom.html
@@ -47,8 +47,8 @@
           commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
         <!-- <a href="./cclass"><div class="button button-ext">Create a Classroom</div></a> -->
-        <a class="button button-ext modal-trigger" href="#demo-modal-custom">Create a Classroom</a>
-        <a href=""><div class="button button-ext">Join a Classroom</div></a>
+        <a class="button button-ext modal-trigger" href="#demo-modal-custom-create">Create a Classroom</a>
+        <a class="button button-ext modal-trigger" href="#demo-modal-custom-join">Join a Classroom</a>
       </div>
       <div class="grid-container">
         <div class="info">
@@ -61,12 +61,23 @@
               <div class="subject">{{ class.subject }} ({{ class.code }})</div>
               <div class="desc">{{ class.description }}</div>
               <div class="button g-button">Delete Class</div>
-              <a href="classroom-detail.html"><div class="button">View Class</div></a>
+              <a href=""><div class="button">View Class</div></a>
             </div>
           {% endfor %}
         </div>
         <div class="info">
           <div class="header">Joined Classes</div>
+          {% if followedClassesLen == 0 %}
+            <div class="description">You are not enrolled in any classes.</div>
+          {% endif %}
+          {% for class in followedClasses %}
+            <div class="class">
+              <div class="subject">{{ class.subject }} ({{ class.code }})</div>
+              <div class="desc">{{ class.description }}</div>
+              <div class="button g-button">Delete Class</div>
+              <a href=""><div class="button">View Class</div></a>
+            </div>
+          {% endfor %}
         </div>
       </div>
       {% else %}
@@ -79,11 +90,32 @@
     </div>
 
     <!-- Modal Structure -->
-    <div id="demo-modal-custom" class="modal">
+    <div id="demo-modal-custom-create" class="modal">
       <div class="modal-content">
         <form method="post">
           {% csrf_token %}
           {{ cform }}
+          <input type="submit" value="Save" class="modal-button">
+        </form>
+      </div>
+      <div class="modal-footer">
+        <a href="" class="modal-button-gray">Cancel</a>
+      </div>
+    </div>
+    <script>
+      $(document).ready(function(){
+        $('.modal').modal({
+          dismissible: false
+        })
+      })
+    </script>
+
+    <!-- Modal Structure -->
+    <div id="demo-modal-custom-join" class="modal">
+      <div class="modal-content">
+        <form method="post">
+          {% csrf_token %}
+          <input type="text" value="Enter Code Here..." name="code">
           <input type="submit" value="Save" class="modal-button">
         </form>
       </div>
