--- a/grader/grades/templates/projects/classroom.html
+++ b/grader/grades/templates/projects/classroom.html
@@ -60,8 +60,8 @@
             <div class="class">
               <div class="subject">{{ class.subject }} ({{ class.code }})</div>
               <div class="desc">{{ class.description }}</div>
-              <div class="button g-button">Delete Class</div>
-              <a href=""><div class="button">View Class</div></a>
+              <a href="/delete/{{class.id}}"><div class="button g-button">Delete Class</div></a>
+              <a href="/classroom/{{ class.id }}"><div class="button">View Class</div></a>
             </div>
           {% endfor %}
         </div>
