--- a/grader/grades/templates/projects/classroom_detail.html
+++ b/grader/grades/templates/projects/classroom_detail.html
@@ -38,8 +38,9 @@
 
     <!-- Main Display -->
     <div class="wrapper">
+      {{ editing }}
       <div class="welcome">
-        <div class="header">{{ classroom.subject }} ({{ classroom.code }})</div>
+        <div class="header">{{ classroom.subject }}</div>
         <div class="description">{{ classroom.name }} - {{ classroom.description }}</div>
     </div>
 
