--- a/grader/grades/templates/projects/classroom.html
+++ b/grader/grades/templates/projects/classroom.html
@@ -74,7 +74,7 @@
             <div class="class">
               <div class="subject">{{ class.subject }} ({{ class.code }})</div>
               <div class="desc">{{ class.description }}</div>
-              <div class="button g-button">Unenroll</div>
+              <a href="/unenroll/{{class.id}}"><button class="button g-button" style="border:none">Unenroll</button></a>
               <a href="/classroom/{{ class.id }}"><div class="button">View Class</div></a>
             </div>
           {% endfor %}
