--- a/grader/grades/templates/projects/ctask.html
+++ b/grader/grades/templates/projects/ctask.html
@@ -11,8 +11,8 @@
 <body>
     <form method="post">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Save" class="modal-button">
+        {{ forom }}
+        <input type="submit" value="Save" >
       </form>
 </body>
 </html>
