final update for now

--- a/grader/grades/templates/projects/classroom.html
+++ b/grader/grades/templates/projects/classroom.html
@@ -42,10 +42,11 @@
       {% if first_name %}
       <div class="welcome">
         <div class="header">Create A New Classroom Or Join An Existing Classroom...</div>
-        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        <div class="description">gradeassist is a website that facilitates easier viewing and creation of tasks, building upon
+            the functionalities of sites such as Google Classroom and Schoology. It was designed with teachers and students
+            in mind with simplicity, ease-of-use and functionality being its cornerstones of development. Quite often, with
+            several classes per semester, it is easy for students to lose track of upcoming evaluations, work tasks and
+            marks and we hope to address these issues with gradeassist.</div>
         <!-- <a href="./cclass"><div class="button button-ext">Create a Classroom</div></a> -->
         <a class="button button-ext modal-trigger" href="#demo-modal-custom-create">Create a Classroom</a>
         <a class="button button-ext modal-trigger" href="#demo-modal-custom-join">Join a Classroom</a>
