--- a/grader/grades/templates/projects/ctask.html
+++ b/grader/grades/templates/projects/ctask.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <script src="main.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+        <script type = "text/javascript" src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>           
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+    
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+        <link href="{% static 'css/navigation.css' %}" rel="stylesheet">
+        <link href="{% static 'css/classroom.css' %}" rel="stylesheet">
 </head>
 <body>
-    <form method="post">
-        {% csrf_token %}
-        {{ forom }}
-        <input type="submit" value="Save" >
-      </form>
+    <br><br><br>
+        <div class="container">
+                <div class="modal-content">
+                  <form method="post">
+                    {% csrf_token %}
+                    {{ forom }}
+                    <input type="submit" value="Save" class="modal-button">
+                  </form>
+                </div>
+               
+            </div>
 </body>
 </html>
